# apps/api/internal/pkg/swagger/swagger.json
@@ -38,6 +38,21 @@
                         "description": "Number of items per page (default: 10)",
                         "name": "pageSize",
                         "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "sub_dragon_id"
+                        ],
+                        "type": "string",
+                        "description": "Get users by field (default 1)",
+                        "name": "getBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Get users by field value (default 1)",
+                        "name": "getByValue",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -147,6 +162,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "subDragonId": {
+                    "type": "integer"
+                },
                 "updatedAt": {
                     "type": "string"
                 },
@@ -194,6 +212,9 @@
                 },
                 "email": {
                     "type": "string"
+                },
+                "subDragonId": {
+                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
